--- a/kv/asignarscreen.kv
+++ b/kv/asignarscreen.kv
@@ -3,19 +3,19 @@
         padding:10
         spacing:10
         orientation:"vertical"
-        Carousel:
-            direction: "right"
+        GridLayout:
+            cols: 3
+            Button:
+                size_hint: 0.1, 0.35
+                text:'<<'
+                on_press: root.move_forward(is_forward=False)
             Image:
-                id: carousel_images
-                source: "kv/images/logo_mercadito.png"
-
-            Image:
-                id: carousel_images
-                source: "kv/images/pass.png"
-
-            Image:
-                id: carousel_images
-                source: "kv/images/marketing.png"
+                id: pic_assign
+                source:'kv/images/logo_mercadito.png'
+            Button:
+                size_hint: 0.1, 0.35
+                text:'>>'
+                on_press: root.move_forward(is_forward=True)
         GridLayout:
             cols: 2
             size_hint: 0.9,0.15
